--- a/index.html
+++ b/index.html
@@ -2,84 +2,89 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href=".assets/css/reset.css"/>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
     <title>Web Developer Portfolio</title>
 </head>
 
 <body>
+    
     <header>
-        <h1>Helen Colon</h1>
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#resume">Resume</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<main>
-    <div class="left-section">
-        <div class="my-image">
-        <img src="./images/Helen1020.jpg" alt="My Profile Picture" id=helen />
+        <div class="header">
+            <h1>Helen Colon</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                </ul>
+            </nav>
         </div>
-        <br>
-       <!-- <div id="about-me"> 
+    </header>
+
+    <main>
+        <div class="left-section">
+            <div class="my-image">
+                <img src="./assets/images/Helen1020.jpg" alt="My Profile Picture" id="helen" />
+            </div>
+            <br>
+            <!-- <div id="about-me"> 
             <h2>About Me</h2> 
-        </div> -->
-        <br>
-        <div id="projects">
-            <h2>Projects</h2>
-        </div>
-        <br>
-        <br>
-        <div id="contact">
-            <h2>Contact Me</h2>
-            <span>GitHub:</span>
-            <a href="https://github.com/Lychnian">Lychnian</a>
-            <p>helenvcolon@gmail.com</p>
-        </div>
-    </div>
-
-    <div class="right-section">
-        <div class="about-me">
-            <p><h2>About Me<h2></p>
-            <p>
-            Hello! I'm Helen, a passionate and dedicated web developer currently pursuing my journey in the dynamic world of web development. I am enrolled in UPenn's LPS Coding Bootcamp, where I am mastering both front-end and back-end technologies. I thrive on problem-solving and innovative thinking. Every project I undertake is an opportunity to challenge myself and learn something new!
-            </p>
+            </div> -->
+            <br>
+            <div id="projects">
+                <h2>Projects</h2>
+            </div>
+            <br>
+            <br>
+            <div id="contact">
+                <h2>Contact Me</h2>
+                <span>GitHub:</span>
+                <a href="https://github.com/Lychnian">Lychnian</a>
+                <p>helenvcolon@gmail.com</p>
+            </div>
         </div>
 
-        <div class="projects">
-            <div class="flex-container">
-                <div class="major-box">
-                    <p><a href="https://Lychnian.github.io/dog-breeds-for-you/">Dog Breeds For You</a></p>
-                </div>
+        <div class="right-section">
+            <div class="about-me">
+                <p>About Me</p>
+                <p>
+                Hello! I'm Helen, a passionate and dedicated web developer currently pursuing my journey in the dynamic world of web 
+                development. I am enrolled in UPenn's LPS Coding Bootcamp, where I am mastering both front-end and back-end 
+                technologies. I thrive on problem-solving and innovative thinking. Every project I undertake is an opportunity to 
+                challenge myself and learn something new!
+                </p>
+            </div>
 
-                <div class="box">
-                    <p><a href="https://Lychnian.github.io/js-timed-quiz/">JavaScript Timed Quiz</a></p>
-                </div>
+            <div class="projects">
+                <div class="flex-container">
+                    <div class="major-box">
+                        <p><a href="https://Lychnian.github.io/dog-breeds-for-you/">Dog Breeds For You</a></p>
+                    </div>
 
-                <div class="box">
-                    <p><a href="https://Lychnian.github.io/work-day-scheduler/">Work Day Scheduler</a></p>
-                </div>
+                    <div class="box">
+                        <p><a href="https://Lychnian.github.io/js-timed-quiz/">JavaScript Timed Quiz</a></p>
+                    </div>
 
-                <div class="box">
-                    <p><a href="https://Lychnian.github.io/password-generator/">Password Generator</a></p>
-                </div>
+                    <div class="box">
+                        <p><a href="https://Lychnian.github.io/work-day-scheduler/">Work Day Scheduler</a></p>
+                    </div>
 
-                <div class="box">
-                    <p><a href="https://Lychnian.github.io/accessible-marketing-website/"><h3>Accessible Marketing Website</h3></a></p>
+                    <div class="box">
+                        <p><a href="https://Lychnian.github.io/password-generator/">Password Generator</a></p>
+                    </div>
+
+                    <div class="box">
+                        <p><a href="https://Lychnian.github.io/accessible-marketing-website/"><h3>Accessible Marketing Website</h3></a></p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</main>
+    </main>
 </body>
 
 </html>               
