Changed image, edited html and css contact me, about me, and projects.

--- a/index.html
+++ b/index.html
@@ -30,33 +30,25 @@
             <div class="my-image">
                 <img src="./assets/images/Helen1020.jpg" alt="My Profile Picture" id="helen" />
             </div>
-            <br>
-            <!-- <div id="about-me"> 
-            <h2>About Me</h2> 
-            </div> -->
-            <br>
-            <div id="projects">
+             <div id="projects">
                 <h2>Projects</h2>
             </div>
             <br>
             <br>
+            <br>
+            <br>
             <div id="contact">
                 <h2>Contact Me</h2>
-                <span>GitHub:</span>
-                <a href="https://github.com/Lychnian">Lychnian</a>
-                <p>helenvcolon@gmail.com</p>
             </div>
         </div>
 
         <div class="right-section">
             <div class="about-me">
-                <p>About Me</p>
-                <p>
-                Hello! I'm Helen, a passionate and dedicated web developer currently pursuing my journey in the dynamic world of web 
+                <p><h4>About Me</h4></p>
+                <p>Hello! I'm Helen, a passionate and dedicated web developer currently pursuing my journey in the dynamic world of web 
                 development. I am enrolled in UPenn's LPS Coding Bootcamp, where I am mastering both front-end and back-end 
                 technologies. I thrive on problem-solving and innovative thinking. Every project I undertake is an opportunity to 
-                challenge myself and learn something new!
-                </p>
+                challenge myself and learn something new!</p>
             </div>
 
             <div class="projects">
@@ -79,6 +71,11 @@
 
                     <div class="box">
                         <p><a href="https://Lychnian.github.io/accessible-marketing-website/"><h3>Accessible Marketing Website</h3></a></p>
+                    </div>
+                    <div class="boxcontact">
+                        <p><span>GitHub:</span>
+                        <a href="https://github.com/Lychnian">Lychnian</a>
+                        <p>helenvcolon@gmail.com</p>
                     </div>
                 </div>
             </div>
