--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#resume" id="resumeLink">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,7 +38,7 @@
             <br>
             <br>
             <div id="contact">
-                <h2>Contact Me</h2>
+                <h2>Contact</h2>
             </div>
         </div>
 
@@ -74,8 +74,7 @@
                     </div>
                     <div class="boxcontact">
                         <p><span>GitHub:</span>
-                        <a href="https://github.com/Lychnian">Lychnian</a>
-                        <p>helenvcolon@gmail.com</p>
+                        <a href="https://github.com/Lychnian">Lychnian</a>helenvcolon@gmail.com</p>
                     </div>
                 </div>
             </div>
