Changed background again, added hover, some styling edits.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                         <p><span>GitHub:</span>
                         <a href="https://github.com/Lychnian">Lychnian</a>helenvcolon@gmail.com</p>
                     </div>
+
+                    <footer>
+                        <p><pre>Made by 🌷 Helen Colon</pre></p>
+                    </footer>
+
                 </div>
             </div>
         </div>
