Added more hover features, edit README, Edited Media Queries.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <!--Meta information for character set and viewport-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Link to CSS reset file -->
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <!--Link to external stylesheet for styling-->
     <link rel="stylesheet" href="./assets/css/style.css">
-    
     <!--Link to Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
 
@@ -60,7 +60,7 @@
         <!--Right section containing About Me, Projects, and Contact details-->
         <div class="right-section">
             <div class="about-me">
-                <p><h4>About Me</h4></p>
+                <h2>About Me</h2>
                 <p>Hello! I'm Helen, a passionate and dedicated web developer currently pursuing my journey in the dynamic world of web 
                 development. I am enrolled in UPenn's LPS Coding Bootcamp, where I am mastering both front-end and back-end 
                 technologies. I thrive on problem-solving and innovative thinking. Every project I undertake is an opportunity to 
@@ -70,31 +70,30 @@
             <div class="projects">
                 <div class="flex-container">
                     <!--Individual project boxes with images-->
-                    <div class="major-box" id="major" style="background-image: url('.assets/images/dogs.jpg')">
+                    <div class="major-box" id="major" style="background-image: url('./assets/images/dogs.jpg')">
                         <p><a href="https://Lychnian.github.io/dog-breeds-for-you/">Dog Breeds For You</a></p>
                     </div>
 
-                    <div class="box" style="background-image: url('.assets/images/quiz.jpg')">
+                    <div class="box" id="box1" style="background-image: url('./assets/images/quiz.jpg')">
                         <p><a href="https://Lychnian.github.io/js-timed-quiz/">Timed Quiz</a></p>
                     </div>
 
-                    <div class="box" style="background-image: url('.assets/images/scheduler.jpg')">
+                    <div class="box" style="background-image: url('./assets/images/scheduler.jpg')">
                         <p><a href="https://Lychnian.github.io/work-day-scheduler/">Scheduler</a></p>
                     </div>
 
-                    <div class="box" style="background-image: url('.assets/images/password.jpg')">
+                    <div class="box" style="background-image: url('./assets/images/password.jpg')">
                         <p><a href="https://Lychnian.github.io/password-generator/">Password</a></p>
                     </div>
 
-                    <div class="box"style="background-image: url('.assets/images/horiseon.jpg')">
-                        <p><a href="https://Lychnian.github.io/accessible-marketing-website/"><h3>Horiseon</h3></a></p>
+                    <div class="box"style="background-image: url('./assets/images/horiseon.jpg')">
+                        <p><a href="https://Lychnian.github.io/accessible-marketing-website/">Horiseon</a></p>
                     </div>
 
                     <!--Contact details box-->
                     <div class="boxcontact" id="boxcontact">
-                        <p><span>GitHub:</span>
-                            <a href="https://github.com/Lychnian">Lychnian</a><span>Email:</span>
-                            <a href="mailto:helenvcolon@gmail.com">helenvcolon@gmail.com</a>
+                        <p>Mobile: +1 (555) 123-4567<span> GitHub: </span>
+                            <a href="https://github.com/Lychnian">Lychnian</a><span>
                         </p>
                     </div>
                 </div>
