Tweak mobile responsiveness (sizing About-Me), edit description.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <h2>About Me</h2>
                 <p>Hello! I'm Helen, a passionate and dedicated web developer currently pursuing my journey in the dynamic world of web 
                 development. I am enrolled in UPenn's LPS Coding Bootcamp, where I am mastering both front-end and back-end 
-                technologies. I thrive on problem-solving and innovative thinking. Every project I undertake is an opportunity to 
-                challenge myself and create something new!</p>
+                technologies. I thrive on problem-solving and innovative thinking. In every project, I aim to deliver solutions that 
+                not only meet expectations but exceed them, pushing the boundaries of what's possible! </p>
             </div>
             <!--Projects sections-->
             <div class="projects">
