Added Garden Bliss Project

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         <p><a href="https://Lychnian.github.io/password-generator/">Password</a></p>
                     </div>
 
-                    <div class="box"style="background-image: url('./assets/images/horiseon.jpg')">
-                        <p><a href="https://Lychnian.github.io/accessible-marketing-website/">Horiseon</a></p>
+                    <div class="box"style="background-image: url('./assets/images/garden.jpg')">
+                        <p><a href="https://jeffch19.github.io/garden-bliss/">Garden Bliss</a></p>
                     </div>
 
                     <!--Contact details box-->
