edited Garden Bliss link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
 
                     <div class="box"style="background-image: url('./assets/images/garden.jpg')">
-                        <p><a href="https://jeffch19.github.io/garden-bliss/">Garden Bliss</a></p>
+                        <p><a href="https://garden-planner19-05823e4485e2.herokuapp.com/">Garden Bliss</a></p>
                     </div>
 
                     <!--Contact details box-->
